chapter2/deployment/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: video-gallery
  labels:
    app: video-gallery
spec:
  strategy:
    type: RollingUpdate
  replicas: 2
  selector:
    matchLabels:
      app: video-gallery-label
  template:
    metadata:
      labels:
        app: video-gallery-label
    spec:
      imagePullSecrets: 
        - name: tencent-cloud-pull-credential
      containers:
        - name: app
          image: ccr.ccs.tencentyun.com/idcf-k8s-devops/video-gallery:v1
          ports:
            - name: http
              containerPort: 80
          resources:
            requests:
              memory: 128Mi
              cpu: 200m
            limits:
              memory: 256Mi
              cpu: 500m
---

apiVersion: v1
kind: Service
metadata:
  name: video-gallery
  labels:
    app: video-gallery
spec:
  type: LoadBalancer
  selector:
    app: video-gallery-label
  ports:
    - name: http
      targetPort: 80
      port: 80
